# qt-tcp-chat-client-server

chat_Client/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  tcpclientworker.cpp  tcpclientworker.h
chat_Server/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  tcpworker.cpp  tcpworker.h
